# emx-pytorch2c

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  requirements-ci.txt  setup.cfg  setup.py
cli/: onnx2c.py
csrc/: c_ref_backend.c  c_ref_backend.h  ops_abs.c  ops_add.c  ops_amax.c  ops_amin.c  ops_angle.c  ops_atan2.c  ops_binary.c  ops_binary.h  ops_bmm.c  ops_broadcast_in_dim.c  ops_cbrt.c  ops_ceil.c  ops_clamp_max.c  ops_clamp_min.c  ops_conj.c  ops_conj_physical.c  ops_conv2d.c  ops_copysign.c  ops_cos.c  ops_deg2rad.c  ops_digamma.c  ops_div.c  ops_erfinv.c  ops_exp.c  ops_exp2.c  ops_floor.c  ops_floor_divide.c  ops_fmax.c  ops_fmin.c  ops_fmod.c  ops_frac.c  ops_hardsigmoid.c  ops_hardswish.c  ops_heaviside.c  ops_hypot.c  ops_i0.c  ops_ldexp.c  ops_lgamma.c  (+45 more)
prompts/: reduce_constraints.md
scripts/: count_test_ops.py  list_aten_core_ops.py  list_aten_ops.py  native_functions.2.9.1.yaml  native_functions.md
tests/: list_aten_core_ops_ref.md  list_aten_core_ops_ref.txt  list_aten_ops_ref.md  list_core_ops_ref.md  test_add_op.py  test_binary_elementwise_ops.py  test_bmm_op.py  test_broadcast_in_dim_op.py  test_codegen_backend.py  test_codegen_backend_refactor.py  test_codegen_golden.py  test_codegen_ops.py  test_codegen_shape_inference.py  test_cref_amax_amin_op.py  test_cref_broadcast_in_dim_op.py  test_cref_conv2d_op.py  test_cref_count_test_ops.py  test_cref_lstm_op.py  test_cref_ops.py  test_cref_torch_compile_backend.py  test_exportc_codegen.py  test_exportc_golden.py  test_group_registry.py  test_list_aten_core_ops.py  (+6 more)
(+298 files in other folders)
