[metadata]
name = ref-backend
version = 0.1.0
description = Correctness-first reference backend for torch.compile
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch

[options.packages.find]
where = src
