[metadata]
name = c-ref-backend
version = 0.1.0
description = Correctness-first reference backend for torch.compile
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch
    Jinja2
include_package_data = True

[options.package_data]
codegen_backend = templates/*.j2

[options.packages.find]
where = src
